--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.svg" type="image/svg+xml" />
+        <link rel="stylesheet" href="%PUBLIC_URL%/index.css">
         <title>svg~ o(*￣▽￣*)o</title>
     </head>
     <body>
+        <span id="forkongithub">
+            <a href="https://github.com/YangsonHung/learn-svg" target="_blank">Fork me on GitHub</a>
+        </span>
         <div id="root"></div>
     </body>
 </html>
