--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.svg" type="image/svg+xml" />
-        <link rel="stylesheet" href="%PUBLIC_URL%/index.css">
+        <link rel="stylesheet" href="%PUBLIC_URL%/forkongithub.css">
         <title>svg~ o(*￣▽￣*)o</title>
     </head>
     <body>
